5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1716_2496.log
== TEST (2019-05-02 21:06:07) 
-- CODE:
num = int(input("Digite um numero:"))
while(num != -1):
	num = num + 1
	print(num)
-- OUTPUT:
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:09:20) 
-- CODE:
num = int(input("Digite um numero:"))
soma = 0
while(num != -1):
	soma = num + 1
	print(num)
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:25:42) 
-- CODE:
#primeiro input
num = int(input("Digite um numero:"))
soma = 0
while(num != -1):
	soma = num + 1
	print(soma)
	#segundo input
	num = int(input("digite um numero"))
	
-- OUTPUT:
-524
1076
334
-8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:28:12) 
-- CODE:
#primeiro input
num = int(input("Digite um numero:"))
soma = 0
while(num != -1):
	soma = num + 1
	print(soma)
	#segundo input
	num = int(input("digite um numero"))
	
-- OUTPUT:
-524
1076
334
-8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:37:50) 
-- CODE:
#primeiro input
num = int(input("Digite um numero:"))
soma = 0
while(num != -1):
	num = int(input("digite um numero"))
	soma = soma + 1
	print(soma)
	
	
	
-- OUTPUT:
1
2
3
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:38:47) 
-- CODE:
#primeiro input
num = int(input("Digite um numero:"))
soma = 0
while(num != -1):
	num = int(input("digite um numero"))
	soma = num + 1
	print(soma)
	
	
	
-- OUTPUT:
1076
334
-8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:39:05) 
-- CODE:
#primeiro input
num = int(input("Digite um numero:"))
soma = 0
while(num != -1):
	num = int(input("digite um numero"))
	soma = num + num
	print(soma)
	
	
	
-- OUTPUT:
2150
666
-18
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:39:45) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num != -1):
	num2 = int(input("digite um numero"))
	soma = num1 + num2
	print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(num != -1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:40:04) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero"))
	soma = num1 + num2
	print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:41:02) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero"))
	soma = num1 + num2 + num2
	print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:41:14) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero"))
	soma = num1 + num2 + num2
	print(soma)
	
	
	
-- EXECUTION TIME:
0.189119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:44:14) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero:"))
	soma = num1 + num2
	while(num2 != -1):
		num3 = int(input("digite um numero:"))
		soma = num1 + num2 + num3
	print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num3 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:45:32) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero:"))
	soma = num1 + num2
	while(num2 != -1):
		num3 = int(input("digite um numero:"))
		soma = num1 + num2 + num3
		print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num3 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:46:37) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero:"))
	soma = num1 + num2
	while(num2 != -1):
		num3 = int(input("digite um numero:"))
		soma = num1 + num2 + num3
print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num3 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:48:17) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero:"))
	soma = num1 + num2
	while(num2 != -1):
		num3 = int(input("digite um numero:"))
		soma = num1 + num2 + num3
		if(num1 == -1 or num2 == -1 or num3 == -1):
			print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num3 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:48:47) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero:"))
	soma = num1 + num2
	while(num2 != -1):
		num3 = int(input("digite um numero:"))
		soma = num1 + num2 + num3
		if(num1 == -1 or num2 == -1 or num3 == -1):
			print(soma)
	
	
	
-- EXECUTION TIME:
0.144165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 8, in <module>
    num3 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:49:35) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero:"))
	soma = num1 + num2
	if(num1 == -1 or num2 == -1 or num3 == -1):
			print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(num1 == -1 or num2 == -1 or num3 == -1):
NameError: name 'num3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:49:54) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero:"))
	soma = num1 + num2
	if(num1 == -1 or num2 == -1):
			print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:51:34) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero2:"))
	soma = num1 + num2
	if(num1 == -1 or num2 == -1):
			print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:52:38) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero2:"))
	soma = num1 + num2
	if(num1 == -1 or num2 == -1):
			print(soma)
	
	
	
-- EXECUTION TIME:
0.226667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:53:25) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero2:"))
	soma = num2 + num2
	if(num1 == -1 or num2 == -1):
			print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:55:15) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero2:"))
	soma12 = num1 num2
	soma = soma12 + num2
	if(num1 == -1 or num2 == -1):
			print(soma)
	
	
	
-- ERROR:
File "XXXX", line 6
    soma12 = num1 num2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:55:36) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero2:"))
	soma12 = num1 + num2
	soma = soma12 + num2
	if(num1 == -1 or num2 == -1):
			print(soma)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:57:51) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0
while(num1 != -1):
	num2 = int(input("digite um numero2:"))
	soma12 = num1 + num2
	soma = soma12 + num2
	if(num1 == -1 or num2 == -1):
			print(soma + 1)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:04:18) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0

soma = 0
total = 0
while (nu1 != -1 ):
	soma = soma + 1
	total = total + soma
	print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while (nu1 != -1 ):
NameError: name 'nu1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:04:30) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))
soma = 0

soma = 0
total = 0
while (num1 != -1 ):
	soma = soma + 1
	total = total + soma
	print(total)
-- OUTPUT:
1
3
6
10
15
21
28
36
45
55
66
78
91
105
120
136
153
171
190
210
231
253
276
300
325
351
378
406
435
465
496
528
561
595
630
666
703
741
780
820
861
903
946
990
1035
1081
1128
1176
1225
1275
1326
1378
1431
1485
1540
1596
1653
1711
1770
1830
1891
1953
2016
2080
2145
2211
2278
2346
2415
2485
2556
2628
2701
2775
2850
2926
3003
3081
3160
3240
3321
3403
3486
3570
3655
3741
3828
3916
4005
4095
4186
4278
4371
4465
4560
4656
4753
4851
4950
5050
5151
5253
5356
5460
5565
5671
5778
5886
5995
6105
6216
6328
6441
6555
6670
6786
6903
7021
7140
7260
7381
7503
7626
7750
7875
8001
8128
8256
8385
8515
8646
8778
8911
9045
9180
9316
9453
9591
9730
9870
10011
10153
10296
10440
10585
10731
10878
11026
11175
11325
11476
11628
11781
11935
12090
12246
12403
12561
12720
12880
13041
13203
13366
13530
13695
13861
14028
14196
14365
14535
14706
14878
15051
15225
15400
15576
15753
15931
16110
16290
16471
16653
16836
17020
17205
17391
17578
17766
17955
18145
18336
18528
18721
18915
19110
19306
19503
19701
19900
20100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:07:33) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = 0
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + 1
	total = total + soma
	print(total)
-- OUTPUT:
1
3
6
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:08:22) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = 0
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + 1
	total = total + soma
	print(total)
-- OUTPUT:
1
3
6
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:09:19) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = 0
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + 1
	total = total + soma
	print(total + 1)
-- OUTPUT:
2
4
7
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:10:10) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + 1
	total = total + soma
	print(total + 1)
-- OUTPUT:
-523
-1046
-1568
-2089
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:11:17) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + soma
	total = total + soma
	print(total + 1)
-- OUTPUT:
-1049
-3149
-7349
-15749
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:12:15) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma
	total = total + soma
	print(total + 1)
-- OUTPUT:
-524
-1049
-1574
-2099
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:13:44) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	soma = soma + num1
	total = total + soma
	num1 = int(input("Digite um numero12:"))

	print(total + 1)
-- OUTPUT:
-1049
-1024
-666
-317
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 23:14:21) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	soma = soma + num1
	total = total + soma
	num1 = int(input("Digite um numero12:"))

	print(total + 1)
-- EXECUTION TIME:
0.139778
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-1049
-1024
-666
-317
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
1
1
1
1
1
1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
21907
76466
120072
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:14:26) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	soma = soma + num1
	total = total + soma
	num1 = int(input("Digite um numero12:"))

	print(total + 1)
-- OUTPUT:
-1049
-1024
-666
-317
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:19:09) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	soma = soma + num1
	total = total + soma
	num1 = int(input("Digite um numero12:"))
	if(num1 == -1):
		print(total + 1 )
	else:
		print(total)
-- OUTPUT:
-1050
-1025
-667
-317
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:20:16) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = total + soma
	if(num1 == -1):
		print(total + 1 )
	else:
		print(total)
-- OUTPUT:
550
1433
2307
3181
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 23:20:42) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = total + soma
	if(num1 == -1):
		print(total + 1 )
	else:
		print(total)
-- EXECUTION TIME:
0.193879
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
550
1433
2307
3181
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
76259
108912
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:21:20) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = total + soma
	if(num1 == -1):
		print(total + 1 )

-- OUTPUT:
3181
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:22:05) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = 0
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = total + soma
	if(num1 == -1):
		print(total + 1 )

-- OUTPUT:
5281
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:23:57) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = 0
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = num1 + num1
	if(num1 == -1):
		print(soma + 1 )

-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:27:48) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 )

-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:29:59) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 )

-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:31:26) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total)

-- OUTPUT:
872
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:32:37) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 )

-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:37:20) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 )

-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:37:55) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 )

-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:40:42) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 +1 )

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 23:41:00) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 +1 )

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 23:41:22) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 +1 )

-- EXECUTION TIME:
0.30134
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:15:24) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 +1 )
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:35:37) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 +1 )
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:35:51) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1)
		

-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:36:25) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:02:52) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:02:57) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:03:14) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:03:24) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:06:26) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	total = num1 + total
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:06:47) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + num1
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:07:06) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:38:30) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:04) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:27) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
print(total)	

-- OUTPUT:
1399
1397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:36) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
print(total)	

-- OUTPUT:
1399
1397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:52) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
print(total)	

-- OUTPUT:
1399
1397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:41:24) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
	

-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:41:34) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
	

-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:41:39) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

total = num1
soma = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero1:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
	

-- OUTPUT:
1399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:43:28) 
-- CODE:
#primeiro input
num1 = int(input("Digite um numero1:"))

soma = num1
total = 0
while (num1 != -1 ):
	num1 = int(input("Digite um numero12:"))
	soma = soma + num1
	total = num1 + soma
	if(num1 == -1):
		print(total + 1 + 1)
		

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
